# polymarket-data-ingestor

./: .gitignore  Cargo.toml  Dockerfile  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  tick_generator.rs
cli/src/replay/: file_reader.rs  mod.rs  tick_generator.rs
collector/: Cargo.toml
collector/src/: lib.rs  main.rs
collector/src/client/: connection.rs  mod.rs  reconnecter.rs
collector/tests/: feed_integration_test.rs
deploy/: Cargo.toml
deploy/gcp/: deploy.sh  main.tf  startup-script.sh  terraform.tfvars
deploy/src/: main.rs
notebooks/: bbo.ipynb
src/: lib.rs  main.rs
src/client/: connection.rs  mod.rs  reconnecter.rs
src/replay/: config.rs  file_reader.rs  gcs_downloader.rs  message_parser.rs  mod.rs
tests/: feed_integration_test.rs
