[package]
name = "polymarket-data-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
anyhow = "1"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = "0.3"
futures = "0.3"
native-tls = "0.2"
base64 = "0.22.1"
tokio-util = "0.7.15"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
anyhow = "1"

[[bin]]
name = "feed"
path = "src/bin/feed.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
