[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
data-collector = { path = "../collector" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust_decimal = "1.37.2"
csv = "1.3.1"
zstd.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs" 
