[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
native-tls = { workspace = true }
base64 = { workspace = true }
tokio-util = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "collector"
path = "src/main.rs" 